--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -54,10 +54,10 @@
             max-height: 90vw;
 
             h2 {
-                font-size: 18px;
+                font-size: 20px;
                 margin-left: 2%;
                 margin-right: 2%;
-                width: 27vw;
+                width: 85vw;
                 color: white;
                 position: absolute;
                 align-self: end;
